dtos model class -> recors